tests/should_fail/first_line_indent.jou
    def main() -> int:  # Error: expected a C function declaration or a function definition, got more indentation
    return '\0'
